pet related pages, css and js were added

--- a/templates/appointment/appointment_schedule.html
+++ b/templates/appointment/appointment_schedule.html
@@ -4,6 +4,8 @@
 {% block title %}Dr. {{ vet.user.full_name }}'s Schedule | PetCare Connect{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 <div class="pet-feed-content">
     <div class="vet-schedule-container">
         <!-- Vet Profile Header -->
