--- a/templates/appointment/appointment_detail.html
+++ b/templates/appointment/appointment_detail.html
@@ -4,6 +4,8 @@
 {% block title %}Appointment Details | PetCare Connect{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 <div class="pet-feed-content">
     <div class="appointment-detail-container">
         <div class="section-header">
