--- a/templates/chat/inbox_detail.html
+++ b/templates/chat/inbox_detail.html
@@ -1,7 +1,8 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base1.html' %}
 {% load static %}
 
 {% block content %}
+<div class="pet-feed-content">
 <div class="main_content">
     <style>
         /* Base Styles */
@@ -491,5 +492,5 @@
     chatMessages.scrollTop = chatMessages.scrollHeight;
 });
     </script>
-
+</div>
 {% endblock %}
