--- a/templates/main/base1.html
+++ b/templates/main/base1.html
@@ -45,8 +45,8 @@
             <div class="sidebar-section">
                 <h3>Menu</h3>
                 <ul>
-                    <li class="active"><a href="#"><i class="fas fa-home"></i> About Us</a></li>
-                    <li><a href="#"><i class="fas fa-users"></i> Changes</a></li>
+                    <li class="active"><a href="{% url 'coreFunctions:index' %}"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="#"><i class="fas fa-users"></i> Inbox</a></li>
                 </ul>
             </div>
             
